--- a/DIC#/DIC#.csproj
+++ b/DIC#/DIC#.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>DIC_</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
